fixed for java 8